--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "express-promise-router": "^3.0.3",
+    "graphql": "^14.4.2",
     "pg": "^7.12.1"
   },
   "devDependencies": {
