--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-promise-router": "^3.0.3",
     "graphql": "^14.4.2",
+    "graphql-iso-date": "^3.6.1",
     "pg": "^7.12.1"
   },
   "devDependencies": {
