--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "nodemon server.js",
+    "json:server": "json-server --watch --port 3001 dummy.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
@@ -20,6 +22,7 @@
     "express-promise-router": "^3.0.3",
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
+    "json-server": "^0.15.0",
     "pg": "^7.12.1"
   },
   "devDependencies": {
