--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "nodemon server.js",
+    "start": "nodemon index.js",
     "json:server": "json-server --watch --port 3001 dummy.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,9 +22,44 @@
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
     "json-server": "^0.15.0",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "preact": "^10.0.0-rc.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "@americanexpress/purgecss-loader": "^1.0.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.5.5",
+    "@gfx/zopfli": "^1.0.14",
+    "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "progress-bar-webpack-plugin": "^1.12.1",
+    "sass-loader": "^7.3.1",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
+    "svg-url-loader": "^3.0.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.2",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.7",
+    "webpack-merge": "^4.2.1"
   }
 }
