--- a/package.json
+++ b/package.json
@@ -8,6 +8,21 @@
     "json:server": "json-server --watch --port 3001 dummy.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "browserslist": {
+    "defaults": [
+      "last 2 versions",
+      "Safari >= 10",
+      "iOS >= 10",
+      "not ie <= 10",
+      "> 1%"
+    ],
+    "evergreen": [
+      "last 2 Chrome versions",
+      "last 2 ChromeAndroid versions",
+      "last 2 Safari versions",
+      "last 2 iOS versions"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +34,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-promise-router": "^3.0.3",
+    "fast-async": "^6.3.8",
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
     "json-server": "^0.15.0",
@@ -60,6 +76,7 @@
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-merge": "^4.2.1"
   }
 }
